--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,20 +1,140 @@
+//general css starting point
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    //color: #ffffff;
+    color: #ffffff;
 }
 
+//baseline css
+html, body, #root, .gameWrapper{
+    height: 100%;
+    overflow: hidden;
+}
+
+h1{
+    font-size: 3rem;
+}
+
+p{
+    font-size: 1.5rem;
+}
+
+body{
+    background-color: #091c18;
+}
+
+//main container
+.gameWrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.headerSection{
+    min-height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
+
+.textSection{
+    min-height: 10vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 3px;
+    margin-top: 10px;
+}
+
+//button css
 .buttonSection{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
+    width: 100vw;
+    min-height: 40vh;
+    margin-top: 70px;
 }
 
 button{
     display: flex;
-    width: 50px;
-    height: 70px;
-    margin: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 120px;
+    border-radius: 10px;
+    margin: 5px;
+    margin-top: 80px;
+    color: #091c18;
+}
+
+.cardButton{
+    height: 90px;
+    width: 65px;
+    margin: 3px;
+    img{
+        height: 80px;
+    }
+}
+
+//small devices -- portrait tablets and large phones
+@media only screen and (min-width: 600px){
+    .textSection{
+        margin-top: 30px;
+    }
+    .buttonSection{
+        margin-top: 10px;
+    }
+    button{
+        margin-top: 10px;
+    }
+}
+
+//large device -- desktop/laptop
+@media only screen and (min-width: 992px){
+    .buttonSection{
+        width: 50%;
+        margin-left: 25%;
+        margin-top: 70px;
+    }
+    button{
+        margin-top: 50px;
+    }
+    .cardButton{
+        height: 140px;
+        width: 100px;
+        img{
+            height: 130px;
+        }
+    }
+}
+
+//xlarge devices
+@media only screen and (min-width: 1200px){
+    h1{
+        font-size: 4rem;
+    }
+    .textSection{
+        margin-top: 0px;
+    }
+    button{
+        margin-top: 80px;
+    }
+}
+
+//xxtra large devices
+@media only screen and (min-width: 1400px){
+    button{
+        margin-top: 140px;
+    }
+    .cardButton{
+        height: 190px;
+        width: 140px;
+        img{
+            height: 180px;
+        }
+    }
 }
