--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,7 +32,7 @@ body{
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 //text section css
@@ -97,9 +97,12 @@ button{
 
 //large device -- desktop/laptop
 @media only screen and (min-width: 992px){
+    h1{
+        font-size: 3rem;
+    }
     .buttonSection{
         width: 50%;
-        margin-left: 25%;
+        margin-left: 24.8%;
         margin-top: 70px;
     }
     button{
