add bot text, add polish, add finishing touches on functionality to best of ability

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     color: #ffffff;
+    font-family: 'Raleway', sans-serif;
 }
 
 //baseline css
@@ -33,6 +34,7 @@ body{
 
 h1{
     font-size: 2rem;
+    font-family: 'Titan One', cursive;
 }
 
 //text section css
